# mec

./: LICENSE  README.md
catkin_ws/src/controls/: CMakeLists.txt  package.xml  setup.py
catkin_ws/src/controls/scripts/: controls.py
catkin_ws/src/controls/src/controls/: __init__.py
catkin_ws/src/mec/: CMakeLists.txt  package.xml  setup.py
catkin_ws/src/mec/firmware/: 40-mec.rules  CMakeLists.txt  main.cpp
catkin_ws/src/mec/msg/: Command.msg
catkin_ws/src/mec/scripts/: controls.py  keyboard.py
catkin_ws/src/mec/src/mec/: __init__.py  motor.py  servo.py
