<?xml version="1.0"?>
<package>
  <name>controls</name>
  <version>0.1.0</version>
  <description>
    This package provides ROS interfaces to control and communicate with the
    MEC robot.
  </description>
  <maintainer email="mr@anassinator.com">anassinator</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>mec</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
</package>
